configuracoes base