@@ -2,8 +2,10 @@ package com.example.demo.config;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.example.demo.model.Usuario;
@@ -22,7 +24,7 @@ public class UsuarioDetails implements UserDetails {
 
 	    @Override
 	    public Collection<? extends GrantedAuthority> getAuthorities() {
-	        return Collections.emptyList(); 
+	        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
 	    }
 
 	    @Override
